--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
             <ul class="sidebar">
                 <li onclick="hideSidebar()"><a href="#"><img src="./Images/Menu Icon.jpg"></a></li>
                 <li><a href="Index.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="About.html">About Us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
