--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
                 <li class="hideonMobile"><a href="#">Home</a></li>
                 <li class="hideonMobile"><a href="#">About Us</a></li>
                 <li class="hideonMobile"><a href="#">Services</a></li>
-                <li onclick="showSidebar()"><a href="#"><img src="./Images/Menu Icon.jpg"></a></li>
+                <li onclick="showSidebar()"><a href="#"><img id="aimg" src="./Images/Menu Icon.jpg"></a></li>
             </ul>
 
         </nav>
