--- a/Index.html
+++ b/Index.html
@@ -17,10 +17,10 @@
         <nav>
             <ul class="sidebar">
                 <li onclick="hideSidebar()"><a href="#"><img src="./Images/Menu Icon.jpg"></a></li>
-                <li><a href="Index.html">Home</a></li>
+                <li onclick="hideSidebar()"><a href="Index.html">Home</a></li>
                 <li><a href="About.html">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Blog</a></li>
+                <li onclick="hideSidebar()"><a href="#WELCOME">Services</a></li>
+                <li onclick="hideSidebar()"><a href="#VIDINP">Contact Us</a></li>
             </ul>
 
             <ul>
@@ -77,7 +77,7 @@
         <img src="./Images/95fc37d946f118308477d3a1103d9e5f.jpg" class="bdimg4">
     </div>
     <h2 id="Hwelc">About Us --</h2><br>
-    <div class="WELCOME">
+    <div id="WELCOME">
         <p id="p1">Welcome to <i class="fa-solid fa-utensils"></i> Papa-Cass Foods</p>
         We offer conveniency to the highest level to provided you the best<br>
         user-experience, At the highest level.<br><br>
@@ -130,7 +130,7 @@
             </div>
         </div>
     </div>
-    <div class="VIDINP">
+    <div id="VIDINP">
         <div class="vid">
             <video controls src="./Image/Papa-Cass.mp4"></video>
         </div>
