--- a/Index.html
+++ b/Index.html
@@ -25,9 +25,9 @@
 
             <ul>
                 <li id="l1"><a href="#">PAPACASS-FOODS</a></li>
-                <li class="hideonMobile"><a href="#">Home</a></li>
-                <li class="hideonMobile"><a href="#">About Us</a></li>
-                <li class="hideonMobile"><a href="#">Services</a></li>
+                <li class="hideonMobile"><a href="Index.html">Home</a></li>
+                <li class="hideonMobile"><a href="About.html">About Us</a></li>
+                <li class="hideonMobile"><a href="#WELCOME">Services</a></li>
                 <li onclick="showSidebar()"><a href="#"><img id="aimg" src="./Images/Menu Icon.jpg"></a></li>
             </ul>
 
